styles/maps.scss
body {
  background-color: #b3d781;
  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
}
h1.pageTitle {
  text-align: center;
  padding-bottom: 14px;
}

#map-container {
  position: relative;
  align-items: center;
  width: 80vw;
  margin-left: 10vw;
  margin-right: 10vw;
  .map-view {
    width: 45%;
    float: left;
    margin-left: 5px;
    margin-right: 5px;
    .map-element:hover {
      box-shadow: 1px 1px 1px 1px #c6cbe1;
    }
    .map-element {
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      height: 350px;
      padding: 1em;
      border: rgba(146, 146, 146, 0.185) 1px solid;
      border-radius: 9px;
      margin-bottom: 20px;
      .map-info {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 0.8em;
        .map-info-text {
          display: flex;
          justify-content: center;
          a {
            color: #244751;
          }
          a:hover {
            color: #0fbeee;
            text-decoration: none;
          }
        }
        .map-title {
          font-family: "Rubik", sans-serif;
          font-weight: bold;
        }
        .imgContainer {
          margin-right: 1em;
          width: 75%;
          border: rgba(146, 146, 146, 0.185) 5px solid;
          border-radius: 5px;

          img {
            max-width: 100%;
          }
        }
        .by {
          font-family: "Rubik", sans-serif;
          font-weight: 300;
          margin: 0px 5px 0px 5px;
        }
        .map-creator {
          font-family: "Rubik", sans-serif;
        }
      }
      .footer {
        display: flex;
        justify-content: space-between;
        .favMap {
          width: 42px;
          border: 2px solid rgba(179, 215, 129, 1);
          border-radius: 50%;
          background-color: rgba(179, 215, 129, 1);
          font-size: 1.5em;
          margin-bottom: 5px;
          margin-left: 20px;
          .fa-heart {
            color: rgba(247, 50, 1, 0.482);
            border: 0px;
            margin-bottom: 5px;
          }
          .fa-heart:hover {
            color: rgb(247, 50, 1);
          }
        }
        .favourited {
          .fa-heart {
            color: rgb(247, 50, 1);
            border: 0px;
          }
        }
        .badge {
          width: fit-content;
          height: fit-content;
          background-color: rgba(0, 139, 139, 0.454);
          margin-right: 20px;
        }
      }
      .mapID,
      .userID {
        display: none;
      }
    }
  }
}

@media only screen and (max-width: 768px) {
  #map-container {
    display: flex;
    flex-direction: column;
    .map-view {
      width: 75%;
    }
  }
}

